<resources>
    <string name="app_name">Story Apps</string>

    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Kata sandi</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="description">Deskripsi</string>
    <string name="camera">Kamera</string>
    <string name="galery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="insert_image_first">Masukan Gambar Terlebih Dahulu</string>
    <string name="isError_email">Format Email tidak valid</string>
    <string name="isEmpty_name">Nama tidak boleh kosong</string>
    <string name="isError_password">Kata sandi Kurang Dari 8 karakter</string>
    <string name="isEmpty_description">Deskripsi tidak boleh kosong</string>
    <string name="maps">Peta</string>
    <string name="retry">Coba lagi</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>